--- a/website/app/index.html
+++ b/website/app/index.html
@@ -311,6 +311,7 @@
 <script src="application/services/project-service.js"></script>
 <script src="application/services/events.js"></script>
 <script src="application/services/help.js"></script>
+<script src="application/services/debounce.js"></script>
 
 <!-------------------------------- Global model services -------------------------->
 <script src="application/services/model/projects-service.js"></script>
