--- a/website/app/application/core/projects/project/reviews/overview.html
+++ b/website/app/application/core/projects/project/reviews/overview.html
@@ -26,7 +26,7 @@
                 <tbody>
                     <tr class="cursor-pointer"
                         ui-sref="projects.project.reviews.edit({'review_id': review.id, 'status': review.status})"
-                        ng-repeat="review in reviews">
+                        ng-repeat="review in project.reviews | byKey: 'status': status">
                         <td ng-if="review.status==='open'">
                             <i class="fa fa-check-circle review-open"></i>
                         </td>
