--- a/website/app/application/core/projects/project/home/directives/home-review-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-review-details.html
@@ -1,19 +1,41 @@
-<div class="row">
-    <div ng-repeat="comment in review.messages">
-        <div class="home-reviews-comment">
-            <div class="row">
+<div>
+    <div class="row item-details">
+        <div class="col-sm-5">
+            <b>Assigned to:</b>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a>johnea@umich.edu</a>
+                    <span class="pull-right">1</span>
+                </li>
+                <li class="list-group-item">
+                    <a>gtarcea@umich.edu</a>
+                    <span class="pull-right">2</span>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-7">
+            <b> <i class="fa fa-fw fa-paperclip"></i> Attachments:</b>
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="item in review.items">
+                    <i class="fa fa-fw fa-file"></i> {{item.name | truncate: 25: '...'}}
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div ng-repeat="comment in review.messages">
+            <div class="home-reviews-comment">
+                <div class="row">
                <span class="pull-left">
-                <i class="fa fa-fw fa-user fa-2x"></i>  {{comment.who}}
-                </span>
-                <span class="pull-right">
-                    <small>{{comment.date}}</small>
-                </span>
-            </div>
-            <p>
-                <div ta-bind="text" ta-readonly='disabled' ng-model="comment.message"></div>
-            </p>
-            <div>
-                <i class="fa fa-fw fa-paperclip"></i>
+                <i class="fa fa-fw fa-user fa-1x"></i>  {{comment.who}}
+                </span><br>
+                    <small style="padding-left: 20px;" class="text-muted">{{comment.date}}</small>
+                </div>
+
+                <div class="row">
+                    <div  style="padding-left: 10px;" ta-bind="text" ta-readonly='disabled' ng-model="comment.message"></div>
+                </div>
             </div>
         </div>
     </div>
