--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -5,7 +5,7 @@
             <a ui-sref="projects.project.reviews.overview">
                 Reviews
             </a>
-            ({{reviews.length}})
+            ({{project.reviews.length}})
         </span>
         <a ng-click="sideboardExpanded = !sideboardExpanded"
            class="pull-right bar-control">
@@ -23,33 +23,41 @@
     <div class="panel-body home-panel-body">
         <ul class="list-unstyled">
             <li class="home-item"
-                ng-repeat="review in project.reviews | byKey: 'status': 'open' | filter:search | event: project.date: project.nextdate as reviews">
+                ng-repeat="review in project.reviews | byKey: 'status': 'open' |
+                 filter:search | event: project.date: project.nextdate as reviews">
                 <div>
                     <i class="fa"
                        ng-class="{'fa-caret-right': !showDetails($index), 'fa-caret-down': showDetails($index)}"></i>
-                    <span ng-click="toggleDetails($index)">
+                    <span class="pointer" ng-click="toggleDetails($index)">
                         {{review.title | truncate: 25 : '...':true}}
                     </span>
-                     <span ng-click="toggleDetails($index)" class="pull-right" style="padding-left: 5px;">
-                        <i data-toggle="tooltip" data-placement="bottom" title="{{review.messages.length}}"
-                           class="pointer fa fa-fw" ng-class="{'fa-comment': review.messages.length !== 0}"></i>
-                    </span>
-                     <span class="pull-right">
-                         <button class="btn btn-xs btn-mini btn-success">comment</button>
-                         <button ng-click="cacheReview(review, $index)" data-toggle="modal"
-                                 data-target="#confirm-close-review"
-                                 class="btn btn-xs btn-mini btn-danger">close</button>
+                     <span ng-click="toggleDetails($index)" class="pull-right"
+                           style="padding-left: 5px;">
+                        <i data-toggle="tooltip" data-placement="bottom"
+                           title="{{review.messages.length}}"
+                           class="pointer fa fa-fw" ng-class="{'fa-comments-o': review.messages.length !== 0}"></i>
                     </span>
 
                     <p>
-                        <small style="padding-left: 10px;" class="text-muted">
-                            Last commented by {{review.messages[(review.messages.length -1)].who}}
-                            on {{(review.messages[(review.messages.length -1)].date)}}
+                        <small> recent comment on :</small>
+                        <small class="text-muted">
+                            {{(review.messages[(review.messages.length -1)].date)}}
                         </small>
+                        <small style="padding-left: 10px;" class="text-muted">
+                            {{review.messages[(review.messages.length -1)].who}}
+                        </small>
+                        <span class="pull-right">
+                        <button class="btn btn-xs btn-mini btn-success">comment</button>
+                        <button ng-click="cacheReview(review, $index)" data-toggle="modal"
+                                data-target="#confirm-close-review"
+                                class="btn btn-xs btn-mini btn-danger">close
+                        </button>
+                        </span>
                     </p>
-                    <div ng-show="showDetails($index)">
-                        <home-review-details review="review"></home-review-details>
-                    </div>
+
+                </div>
+                <div ng-show="showDetails($index)">
+                    <div home-review-details review="review"></div>
                 </div>
             </li>
             <li ng-show="reviews.length === 0" class="home-item">
