--- a/website/app/application/core/projects/project/home/directives/home-sample-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-sample-details.html
@@ -3,7 +3,7 @@
         Description: {{sample.description}}
     </div>
 
-    <div  class="row sample-details">
+    <div  class="row item-details">
         <div class="col-sm-4">
             <b ng-show="sample.properties.composition.unit">Composition:
                 <small>({{sample.properties.composition.unit}})</small>
