--- a/website/app/index.html
+++ b/website/app/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <!-- Le styles -->
     <link href="assets/css/bootstrap.flatly-3.2.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!--<link href="assets/css/animate.css" rel="stylesheet">-->
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
