--- a/website/app/index/sidebar-actions.html
+++ b/website/app/index/sidebar-actions.html
@@ -49,7 +49,7 @@
            ng-click="setActionActive('reviews')"
            ng-class="{active: isActionActive('reviews')}">
             <i class="fa fa-fw fa-comment"></i> Reviews
-            <span class="badge badge-light">{{project.open_reviews.length}}</span>
+            <span class="badge badge-light">{{(project.reviews | byKey: 'status': 'open').length}}</span>
         </a>
 
         <a class="list-group-item"
