--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -5,7 +5,7 @@
             <a ui-sref="projects.project.reviews.overview">
                 Reviews
             </a>
-            ({{project.reviews.length}})
+            ({{(project.reviews | byKey: 'status': 'open').length}})
         </span>
         <a ng-click="sideboardExpanded = !sideboardExpanded"
            class="pull-right bar-control">
@@ -39,20 +39,11 @@
                     </span>
 
                     <p>
-                        <small> recent comment on :</small>
-                        <small class="text-muted">
+                        <small style="padding-left: 10px;" class="text-muted">
+                            {{review.messages[(review.messages.length -1)].who}} commented on
                             {{(review.messages[(review.messages.length -1)].date)}}
                         </small>
-                        <small style="padding-left: 10px;" class="text-muted">
-                            {{review.messages[(review.messages.length -1)].who}}
-                        </small>
-                        <span class="pull-right">
-                        <button class="btn btn-xs btn-mini btn-success">comment</button>
-                        <button ng-click="cacheReview(review, $index)" data-toggle="modal"
-                                data-target="#confirm-close-review"
-                                class="btn btn-xs btn-mini btn-danger">close
-                        </button>
-                        </span>
+
                     </p>
 
                 </div>
@@ -84,7 +75,7 @@
                 </button>
                 <button ng-click="closeReview()" type="button" class="btn btn-danger"
                         data-dismiss="modal">
-                    Yes - Loosing all changes
+                    Yes
                 </button>
             </div>
         </div>
