Add minimize and maximize.

--- a/website/app/application/core/projects/project/home/directives/home-provenance.html
+++ b/website/app/application/core/projects/project/home/directives/home-provenance.html
@@ -7,10 +7,10 @@
             </a>
             ({{drafts.length + procs.length}})
         </span>
-        <a ng-click="sideboardExpanded = !sideboardExpanded"
+        <a ng-click="toggleExpanded()"
            class="pull-right bar-control">
             <i class="fa"
-               ng-class="{'fa-expand': !sideboardExpanded, 'fa-compress': sideboardExpanded}"></i>
+               ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
         </a>
         <input type="text" ng-model="search.name" class="pull-right col-xs-4"
                placeholder="Search processes...">
