--- a/website/app/index.html
+++ b/website/app/index.html
@@ -200,6 +200,7 @@
 <script src="application/core/projects/project/home/directives/home-sample-details.js"></script>
 <script src="application/core/projects/project/home/directives/home-reviews-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-samples-directive.js"></script>
+<script src="application/core/projects/project/home/directives/home-calendar.js"></script>
 <script src="application/core/projects/project/home/directives/home-files-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-provenance-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-notes-directive.js"></script>
