--- a/website/app/application/core/projects/project/home/directives/home-provenance.html
+++ b/website/app/application/core/projects/project/home/directives/home-provenance.html
@@ -23,6 +23,7 @@
     <div class="panel-body home-panel-body">
         <ul class="list-unstyled">
             <li class="home-item"
+                ng-class="{'open-item-details': showDetails($index)}"
                 ng-repeat="draft in project.drafts | filter:search | event:project.date:project.nextdate as drafts">
                 <div>
                     Created a new process
