--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -6,7 +6,7 @@
             </a>
             <a ng-click="showSideboard = !showSideboard">
                 <i class="fa fa-fw fa-2x fa-clipboard"> </i>
-                <span class="badge badge-white" style="position: relative; top: -15px; left: -12px; color: #800000">5</span>
+                <span class="badge badge-superscript-count">{{sideboard.length}}</span>
             </a>
         </div>
     </div>
