--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -29,8 +29,9 @@
                 <div ng-class="{'col-xs-8': showHelp(), 'col-xs-12': !showHelp()}" ng-show="!isExpanded('help')">
                     <div ui-view></div>
                     <div ng-show="showFiles()" class="row">
-                        <project-tree project="{{ project.id }}" from="{{from}}" tree-overview="true"
-                                      color="{{colors.getCurrentProjectColor()}}"></project-tree>
+                        <directory-tree project="project"></directory-tree>
+                        <!-- <project-tree project="{{ project.id }}" from="{{from}}" tree-overview="true"
+                        color="{{colors.getCurrentProjectColor()}}"></project-tree> -->
                         <div class="row">
                             <project-description project-id="{{project.id}}"></project-description>
                         </div>
