--- a/website/app/index.html
+++ b/website/app/index.html
@@ -122,6 +122,7 @@
 <script src="assets/js/calendar.js"></script>
 <script src="assets/js/fullcalendar.js"></script>
 <script src="assets/js/angular/nsPopover.js"></script>
+<script src="assets/js/angular/angular-recursion.min.js"></script>
 
 
 <!------------------------------ Application --------------------------->
@@ -270,6 +271,9 @@
 <script src="application/directives/dfproperties-directive.js"></script>
 <script src="application/directives/adproperties-directive.js"></script>
 <script src="application/directives/projecttree-directive.js"></script>
+<script src="application/directives/directory-tree.js"></script>
+<script src="application/directives/directory-tree-file.js"></script>
+<script src="application/directives/directory-tree-dir.js"></script>
 <script src="application/directives/upperlevel-process-directive.js"></script>
 <script src="application/directives/upperlevel-object-directive.js"></script>
 <script src="application/directives/periodic-table-directive.js"></script>
