--- a/website/app/application/directives/directory-tree.html
+++ b/website/app/application/directives/directory-tree.html
@@ -21,7 +21,7 @@
                 <li class="file-item"
                     ui-draggable="true"
                     drag="file"
-                    ng-repeat="file in files | filter:search | orderBy:'name' | limitTo:50 as matchingFiles track by file.id">
+                    ng-repeat="file in files | orderBy:'name' | limitTo:500 as matchingFiles track by file.id">
                     <div>
                         <div ng-click="toggleDetails(file)"
                              style="cursor: pointer;">
@@ -45,8 +45,8 @@
                             <small class="text-muted">{{::file.birthtime | toDateString}}</small>
                             <small class="text-muted" style="margin-left: 10px">{{::file.fullname}}</small>
                         </p>
-                        <div ng-if="showDetails(file)" style="padding-left: 0px; padding-right: 0px;">
-                            <div class="row" style="padding-left: 0px; padding-right: 0px;">
+                        <div ng-if="showDetails(file)">
+                            <div class="row">
                                 <div ng-if="file.type === 'datadir'">
                                     <directory-tree-dir file="file"></directory-tree-dir>
                                 </div>
