--- a/website/app/index.html
+++ b/website/app/index.html
@@ -274,6 +274,7 @@
 <script src="application/directives/directory-tree.js"></script>
 <script src="application/directives/directory-tree-file.js"></script>
 <script src="application/directives/directory-tree-dir.js"></script>
+<script src="application/directives/directory-tree-display-entry.js"></script>
 <script src="application/directives/upperlevel-process-directive.js"></script>
 <script src="application/directives/upperlevel-object-directive.js"></script>
 <script src="application/directives/periodic-table-directive.js"></script>
