--- a/website/app/index.html
+++ b/website/app/index.html
@@ -271,6 +271,7 @@
 <script src="application/directives/dfproperties-directive.js"></script>
 <script src="application/directives/adproperties-directive.js"></script>
 <script src="application/directives/projecttree-directive.js"></script>
+<script src="application/directives/mc-tree.js"></script>
 <script src="application/directives/directory-tree.js"></script>
 <script src="application/directives/directory-tree-file.js"></script>
 <script src="application/directives/directory-tree-dir.js"></script>
