--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -15,7 +15,7 @@
             <div home-calendar project="project"></div>
         </div>
         <div class="col-xs-6" ng-if="showSideboard">
-            Sideboard here
+            <div home-sideboard project="project"></div>
         </div>
     </div>
     <div class="row">
