--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -1,61 +1,24 @@
-<div>
-    <directory-tree project="project"></directory-tree>
-    <div ng-if="false" class="panel panel-primary">
-        <div class="panel-heading files-color home-panel-heading home-panel-heading">
-            <i class="fa fa-fw fa-files-o bold"></i>
-            <span>
-                <a ui-sref="projects.project.files.overview">
-                    Files
-                </a>
-                ({{fileCount | number}})
-            </span>
-            <a ng-click="toggleExpanded()"
-               class="pull-right bar-control">
-                <i class="fa"
-                   ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
-            </a>
-            <input type="text" ng-model="search" class="pull-right col-xs-4"
-                   placeholder="Search files...">
-            <span class="add-item pull-right">
-                <a tooltip="Add File"><i class="fa fa-fw fa-plus"></i></a>
-            </span>
-        </div>
-        <div class="panel-body home-panel-body no-max-height">
-            <ul class="list-unstyled">
-                <li class="home-item pointer"
-                    ng-click="showMediaType('all', 'All')">
-                    <div>
-                        All
-                        <span class="badge pull-right" style="margin-top: 1px"
-                              ng-class="badge-info">
-                            {{fileCount | number}}
-                        </span>
-                        <p>
-                            <small class="text-muted">{{ project.size | bytes}}</small>
-                        </p>
-                    </div>
-                </li>
-                <li class="home-item pointer"
-                    ng-repeat="mediatype in mediatypes | filter:search | orderBy:'attrs.count':true as mtypes"
-                    ng-click="showMediaType(mediatype.name, mediatype.attrs.description)">
-                    <div>
-                        {{mediatype.attrs.description}}
-                        <span class="badge pull-right" style="margin-top:1px"
-                              ng-class-odd="'odd-badge'"
-                              ng-class-even="'even-badge'">
-                            {{mediatype.attrs.count | number}}
-                        </span>
-                        <p>
-                            <small class="text-muted">{{mediatype.attrs.size | bytes}}</small>
-                        </p>
-                    </div>
-                </li>
-                <li ng-show="mtypes.length === 0" class="home-item">
-                    <div>
-                        No files.
-                    </div>
-                </li>
-            </ul>
-        </div>
+<div class="panel panel-primary">
+    <div class="panel-heading files-color home-panel-heading home-panel-heading">
+        <i class="fa fa-fw fa-files-o bold"></i>
+        <span>
+            File ({{matchingFiles.length | number}})
+        </span>
+        <a ng-click="toggleExpanded()"
+           class="pull-right bar-control">
+            <i class="fa"
+               ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
+        </a>
+        <input type="text" ng-model="searchInput" class="pull-right col-xs-4"
+               placeholder="Search files...">
+        <span class="add-item pull-right">
+            <a tooltip="Add File"><i class="fa fa-fw fa-plus"></i></a>
+        </span>
+    </div>
+    <div class="panel-body home-panel-body no-max-height">
+        <mc-tree items="files"
+                 matches="matchingFiles"
+                 orderby="'name'">
+        </mc-tree>
     </div>
 </div>
