Add display-note directive.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -203,6 +203,7 @@
 <script src="application/core/projects/project/home/directives/home-samples-directive.js"></script>
 <script src="application/core/projects/project/home/directives/display-sample.js"></script>
 <script src="application/core/projects/project/home/directives/display-review.js"></script>
+<script src="application/core/projects/project/home/directives/display-note.js"></script>
 <script src="application/core/projects/project/home/directives/home-calendar.js"></script>
 <script src="application/core/projects/project/home/directives/home-files-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-sideboard.js"></script>
